maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:45: error: not found: value marquesCases
  	marquesCases(x, y + 1, poids +1)
        ^